# mcode

./: .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md  package.json  release-please-config.json  test-worktree-dummy.txt
.claude/: settings.json
.githooks/: post-checkout
.github/: CODEOWNERS  pull_request_template.md
apps/desktop/: CHANGELOG.md  Cargo.toml  electron.vite.config.ts  package.json  tauri.conf.json  tsconfig.json  vitest.config.ts  vitest.config.ts.timestamp-1774316225673-743c6a7755ee5.mjs
apps/desktop/scripts/: after-pack.mjs  build-main.mjs  ci-package.mjs  dev-electron.mjs  generate-snapshot.mjs
apps/desktop/src/: lib.rs  main.rs
apps/desktop/src/main/: app-state.ts  auto-updater.ts  config.ts  editors.ts  file-ops.ts  github.ts  index.ts  logger.ts  main.ts  models.ts  paths.ts  preload.ts  pty-manager.ts  server-manager.ts  skills.ts  snapshot-entry.ts  snapshot-globals.d.ts  spellcheck.ts  worktree.ts
apps/desktop/src/main/__tests__/: app-state.test.ts  attachments.test.ts  config.test.ts  file-ops.test.ts  pty-manager.test.ts  repositories.test.ts  server-manager.test.ts  sidecar-client.test.ts  skills.test.ts  snapshot-entry.test.ts  worktree.test.ts
apps/desktop/src/main/__tests__/helpers/: db.ts
apps/desktop/src/main/repositories/: message-repo.ts  thread-repo.ts  workspace-repo.ts
apps/desktop/src/main/sidecar/: client.ts  types.ts
apps/desktop/src/main/store/: database.ts
apps/desktop/src/main/store/migrations/: V001__initial_schema.sql
apps/desktop/src/preload/: index.ts
crates/mcode-api/: Cargo.toml
crates/mcode-api/src/: commands.rs  lib.rs
crates/mcode-core/: Cargo.toml
crates/mcode-core/src/: events.rs  lib.rs
crates/mcode-core/src/config/: claude.rs
crates/mcode-core/src/process/: manager.rs  mod.rs  provider.rs  sidecar.rs  stream.rs
crates/mcode-core/src/store/: mod.rs  models.rs  writer.rs
crates/mcode-core/src/workspace/: repository.rs
crates/mcode-core/src/worktree/: mod.rs
docs/: 2026-03-28-syntax-highlighting-test-prompt.md  PERFORMANCE_AUDIT.md  SETTINGS_SCHEMA.md  UI_COMPONENTS.md  test-prompts-tool-calls.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: db-info.mjs  dev-web.mjs  doctor.mjs  (+8 more)
(+472 files in other folders)
