[package]
name = "mcode-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mcode desktop application"

[lib]
name = "mcode_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mcode-api = { path = "../../crates/mcode-api" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
