[package]
name = "mcode-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "API adapter layer for Mcode"

[dependencies]
mcode-core = { path = "../mcode-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
